--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           node-version: '16'
 
       - name: Install node package, `unity-license-activate`
-        run: npm install --global unity-license-activate
+        run: npm install --global unity-license-activate@latest
 
       - name: Install node package, `unity-verify-code`
         run: npm install --global unity-verify-code
