--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
       - name: Request manual activation file
         id: alfFile
-        uses: game-ci/unity-request-activation-file@main
+        uses: game-ci/unity-request-activation-file@v2.0-alpha-1
         with:
           unityVersion: ${{ env.UNITY_VER }}
 
