--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,13 @@ jobs:
     steps:
       - name: Request manual activation file
         id: alfFile
-        uses: game-ci/unity-request-activation-file@v2.0-alpha-1
+        uses: game-ci/unity-request-activation-file@v2
         with:
           unityVersion: ${{ env.UNITY_VER }}
 
       # Upload artifact (Unity_v20XX.X.XXXX.alf)
       - name: Expose as artifact
-        uses: actions/upload-artifact@v1
+        uses: actions/upload-artifact@v2
         with:
           name: ${{ steps.alfFile.outputs.filePath }}
           path: ${{ steps.alfFile.outputs.filePath }}
