--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,5 +1,8 @@
 name: Build Game
 on: push
+concurrency: 
+  group: ${{ github.ref }}
+  cancel-in-progress: true
 jobs:
   build_project_WebGL:
     name: Build my project to WebGL ✨
